# airdrome

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  cli.py  compose.yml  go.cmd  pyproject.toml
.claude/: settings.local.json
airdrome/: conf.py  console.py  enums.py  match.py  migrations.py  models.py
airdrome/cloud/: sources.py
airdrome/cloud/apple/: ingest.py  media_services.py  models.py  package.py  schemas.py  scrobbles.py  transfer.py  unify.py  utils.py  xml_library.py
airdrome/cloud/apple/models/: __init__.py  media_services.py  mixins.py  xml_library.py
airdrome/cloud/lastfm/: __init__.py  schemas.py  scrobbles.py
airdrome/cloud/listenbrainz/: __init__.py  scrobble.py
airdrome/cloud/spotify/: __init__.py  scrobbles.py
airdrome/ingest/: __init__.py  base.py  registry.py  sources.py
airdrome/navidrome/: __init__.py  adapter.py  models.py
airdrome/navidrome/sync/: playlists.py  tracks.py
airdrome/normalize/: dedup.py  dedup_history.py  materialize.py  names.py  norm.py  schemas.py
airdrome/normalize/dedup/: __init__.py  auto.py  grouping.py  manual.py  persistence.py  tui.py
airdrome/playlists/: __init__.py  adapter.py  conflicts.py  orchestrator.py  resolver_tui.py  source_remote.py  sync.py
airdrome/scrobbles/: augment_aliases.py  copy_plays.py  match_aliases.py  parser.py
airdrome/terminal/: app.py  apple.py  library.py  maint.py  navi.py  navidrome.py  options.py  pipeline.py  scrobble.py  state.py  status.py  sync.py
airdrome/tools/: reindex.py
alembic/: env.py
alembic/versions/: 2026_05_11_initial_schema.py  2026_05_19_dedup_choices_table.py  2026_05_29_unify_source_models.py  2026_05_31_initial_schema.py  2026_06_05_initial_schema.py
docs/design/: fs-reconcile.md  playlist-reconcile.md  playlist-tools.md
jellyfist/: conf.py  enums.py  models.py  util.py
jellyfist/apple/: ingest.py  play_history.py  schemas.py  utils.py
jellyfist/cloud/apple/: __init__.py  enums.py  ingest.py  library.py  models.py  schemas.py  scrobbles.py  transfer.py  utils.py
jellyfist/cloud/lastfm/: scrobbles.py
jellyfist/cloud/listenbrainz/: scrobble.py
jellyfist/cloud/spotify/: __init__.py  scrobbles.py
jellyfist/loco/navidrome/: __init__.py  models.py  sync.py
jellyfist/loco/navidrome/sync/: playlists.py  tracks.py
jellyfist/navidrome/: __init__.py
jellyfist/navidrome/sync/: playlists.py  tracks.py
jellyfist/normalize/: __init__.py  dedup.py  names.py  norm.py  schemas.py  tracks.py
jellyfist/scrobbles/: augment_aliases.py  match_aliases.py  matcher.py  parser.py  schemas.py
jellyfist/tools/: reindex.py
terminal/: apple.py  library.py  navidrome.py  scrobble.py
tests/: conftest.py  factories.py  test_apple_ingest.py  test_cli_defaults.py  test_dedup.py  test_dedup_auto.py  test_dedup_grouping.py  test_dedup_integration.py  test_dedup_manual.py  test_dedup_persistence.py  test_ingest_detect.py  test_match_aliases.py  test_navidrome_sync.py  test_orchestrator.py  test_organize.py  test_playlist_conflicts.py  test_playlist_sync.py  test_recompute_mains.py  test_resolver_tui.py  test_source_remote.py
