[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airdrome"
version = "0.1.0"
description = "Toolset for migrating from cloud services to Navidrome"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.47.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "ruff>=0.15.2",
    "sqlmodel>=0.0.27",
    "typer>=0.24.1",
]

[tool.setuptools]
packages = ["airdrome"]

[project.scripts]
airdrome = "airdrome.terminal.app:app"

[tool.ruff]
exclude = [".git", "__pycache__", ".venv"]
line-length = 110
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["airdrome"]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
