[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airdrome"
version = "0.1.0"
description = "Toolset for migrating music libraries and play history from cloud services to Navidrome"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Maxim", email = "metheoryt@gmail.com" }]
keywords = ["navidrome", "music", "migration", "scrobbles", "spotify", "lastfm", "listenbrainz", "apple-music"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Environment :: Console",
]
dependencies = [
    "alembic>=1.13",
    "mutagen>=1.47.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.0",
    "sqlalchemy>=2.0",
    "typer>=0.24.1",
]

[project.urls]
Repository = "https://github.com/metheoryt/airdrome"

[project.scripts]
airdrome = "airdrome.terminal.app:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.0",
    "pytest-env>=1.1.5",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["airdrome"]

[tool.hatch.build.targets.sdist]
include = ["/airdrome", "/alembic", "/alembic.ini"]

[tool.ruff]
exclude = [".git", "__pycache__", ".venv"]
line-length = 110
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
# E/F/W: pycodestyle + pyflakes core. I: import sorting. UP: pyupgrade (keep syntax
# modern for the 3.14 target). B: bugbear (likely bugs). SIM: simplifications.
# C4: comprehension hygiene. PIE: misc lint. RUF: Ruff-native checks.
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4", "PIE", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# Typer expects `typer.Argument(...)`/`typer.Option(...)` sentinels as parameter
# defaults; that is the framework's intended idiom, not the B008 mutable-default bug.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# Autogenerated migrations: long postgresql_ops/postgresql_where lines are unavoidable
# and not worth manually wrapping after every `alembic revision --autogenerate`.
"alembic/versions/*.py" = ["E501"]
# Optional ingestion/sync hooks intentionally default to a no-op body; subclasses
# override only the kinds they support (see Importer/PlaylistAdapter docstrings).
"airdrome/ingest/base.py" = ["B027"]
"airdrome/playlists/adapter.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = ["airdrome"]
known-local-folder = ["factories"]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
env = [
    "LIBRARY_DIR=/tmp/airdrome_test_library",
]
